* Added tox support
* Fixed the test suite to run in Python 2.4
* Fixed drag&drop bug in the admin (fixed by jmbarbier)
* Fixed a bug when moving MP_Nodes (fixed by Matt Hoskins)
* Using .pk instead of .id when accessing nodes.
* Removed the Benchmark (tbbench) and example (tbexample) apps.
* Fixed url parts join issues in the admin.
* Fixed: Now installing the static resources (fixed by omad)

Release 1.61 (Jul 24, 2010)
---------------------------

* Added admin i18n contributed by http://bitbucket.org/chembervint
  Included translations: es, ru
* Fixed a bug when trying to introspect the database engine used in Django 1.2+
  while using new style db settings (DATABASES). Added
  Node.get_database_engine to deal with this.

Release 1.60 (Apr 18, 2010)
---------------------------

* Added get_annotated_list, contributed by Alexey Kinyov
* Complete revamp of the documentation. It's now divided in sections for easier
  reading, and the package includes .rst files instead of the html build.
* Added raw id fields support in the admin
* Fixed setup.py to make it work in 2.4 again
* The correct ordering in NS/MP trees is now enforced in the queryset.
* Cleaned up code, removed some unnecessary statements.
* Tests refactoring, to make it easier to spot the model being tested.
* Fixed support of trees using proxied models. It was broken due to a bug in
  Django.
* Fixed a bug in add_child when adding nodes to a non-leaf in sorted MP.
* There are now 648 unit tests. Test coverage is 96%
* This will be the last version compatible with Django 1.0. There will be a
  a 1.6.X branch maintained for urgent bug fixes, but the main development will
  focus on recent Django versions.


Release 1.52 (Dec 18, 2009)
---------------------------

* Really fixed the installation of templates.


Release 1.51 (Dec 16, 2009)
---------------------------

* Forgot to include treebeard/tempates/\*.html in MANIFEST.in


Release 1.5 (Dec 15, 2009)
--------------------------

New features added